Initializing front-end

--- a/src/front/index.html
+++ b/src/front/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <title>Homepage</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body style="font-family: 'Poppins', sans-serif;">
@@ -371,7 +378,7 @@
     <script>
       const umenu = document.getElementById("umenu");
       const img = document.getElementById("img");
-      
+
       // umenu.style.transition = "all 100ms ease-out";
       umenu.style.opacity = "0";
 
@@ -399,8 +406,6 @@
         umenu.style.transition = "all 100ms ease-out";
         umenu.style.opacity = "0";
       });
-
-      
     </script>
   </body>
 </html>
