--- a/src/front/index2.html
+++ b/src/front/index2.html
@@ -5,9 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&display=swap"
+      rel="stylesheet"
+    />
     <title>SignUp Page</title>
   </head>
-  <body class="h-full">
+  <body style="font-family: 'Poppins', sans-serif;" class="h-full">
     <!--
   This example requires some changes to your config:
   
@@ -48,7 +54,7 @@
           <p class="mt-2 text-center text-sm text-gray-600">
             Or
             <a
-              href="../login"
+              href="../signup"
               class="font-medium text-indigo-600 hover:text-red-500"
               >get yourself a new account</a
             >
