--- a/src/front/index2.html
+++ b/src/front/index2.html
@@ -105,7 +105,7 @@
             <div class="text-sm">
               <a
                 href="#"
-                class="font-medium text-indigo-600 hover:text-indigo-500"
+                class="font-medium text-indigo-600 hover:text-red-500"
                 >Forgot your password?</a
               >
             </div>
