--- a/src/front/dashboard.html
+++ b/src/front/dashboard.html
@@ -243,7 +243,7 @@
       </div>
     </nav>
 
-    <div class="overflow-hidden bg-yellow-100 shadow sm:rounded-lg mx-60 mt-10">
+    <div class="overflow-hidden bg-yellow-100 shadow sm:rounded-lg lg:mx-40 sm:mx-20 mt-10">
       <div class="px-4 py-5 sm:px-6">
         <h3 class="text-lg font-medium leading-6 text-gray-900">
           Applicant Information
