--- a/src/front/index2.html
+++ b/src/front/index2.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500&display=swap"
       rel="stylesheet"
     />
-    <title>SignUp Page</title>
+    <title>Login Page</title>
   </head>
   <body style="font-family: 'Poppins', sans-serif;" class="h-full">
     <!--
@@ -43,7 +43,7 @@
         <div>
           <img
             class="mx-auto h-12 w-auto"
-            src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=600"
+            src="https://tailwindui.com/img/logos/mark.svg?color=fuchsia&shade=600"
             alt="Your Company"
           />
           <h2
@@ -55,7 +55,7 @@
             Or
             <a
               href="../signup"
-              class="font-medium text-indigo-600 hover:text-red-500"
+              class="font-medium text-fuchsia-600 hover:text-red-500"
               >get yourself a new account</a
             >
           </p>
@@ -71,7 +71,7 @@
                 type="email"
                 autocomplete="email"
                 required
-                class="relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm"
+                class="relative block w-full appearance-none rounded-none rounded-t-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-fuchsia-500 focus:outline-none focus:ring-fuchsia-500 sm:text-sm"
                 placeholder="Email address"
               />
             </div>
@@ -83,7 +83,7 @@
                 type="password"
                 autocomplete="current-password"
                 required
-                class="relative block w-full appearance-none rounded-none rounded-b-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-indigo-500 focus:outline-none focus:ring-indigo-500 sm:text-sm"
+                class="relative block w-full appearance-none rounded-none rounded-b-md border border-gray-300 px-3 py-2 text-gray-900 placeholder-gray-500 focus:z-10 focus:border-fuchsia-500 focus:outline-none focus:ring-fuchsia-500 sm:text-sm"
                 placeholder="Password"
               />
             </div>
@@ -95,7 +95,7 @@
                 id="remember-me"
                 name="remember-me"
                 type="checkbox"
-                class="h-4 w-4 rounded border-gray-300 text-indigo-600 focus:ring-indigo-500"
+                class="h-4 w-4 rounded border-gray-300 text-fuchsia-600 focus:ring-fuchsia-500"
               />
               <label for="remember-me" class="ml-2 block text-sm text-gray-900"
                 >Remember me</label
@@ -105,7 +105,7 @@
             <div class="text-sm">
               <a
                 href="#"
-                class="font-medium text-indigo-600 hover:text-red-500"
+                class="font-medium text-fuchsia-600 hover:text-red-500"
                 >Forgot your password?</a
               >
             </div>
@@ -114,12 +114,12 @@
           <div>
             <button
               type="submit"
-              class="group relative flex w-full justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2"
+              class="group relative flex w-full justify-center rounded-md border border-transparent bg-fuchsia-600 py-2 px-4 text-sm font-medium text-white hover:bg-fuchsia-700 focus:outline-none focus:ring-2 focus:ring-fuchsia-500 focus:ring-offset-2"
             >
               <span class="absolute inset-y-0 left-0 flex items-center pl-3">
                 <!-- Heroicon name: mini/lock-closed -->
                 <svg
-                  class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400"
+                  class="h-5 w-5 text-fuchsia-500 group-hover:text-fuchsia-400"
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 20 20"
                   fill="currentColor"
